deploy/k8s/mandelbrot-api-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mandelbrot-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - mandelbrot-set-periods.online
      secretName: mandelbrot-api-tls
  rules:
    - host: mandelbrot-set-periods.online
      http:
        paths:
          - path: /api
            backend:
              serviceName: mandelbrot-api
              servicePort: 80
